1.6.0: Correction alignement loupe recherche générale

--- a/core/assets/css/style.css
+++ b/core/assets/css/style.css
@@ -500,7 +500,7 @@
 
 .wpeo-project-wrap .wpeo-header-bar > ul > li.wpeo-general-search .dashicons-search {
   color: rgba(0, 0, 0, 0.2);
-  line-height: 2;
+  line-height: 1.4;
   font-size: 18px; }
 
 .wpeo-project-wrap .wpeo-header-bar > ul > li.wpeo-general-search .open-search-filter {
